--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Lisa Walters</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resume.html">Resume</a></li>
         </ul>
     </div>
 
