--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>resume</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>Lisa Walters' Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
+  <body>
 
-<body>
-
-    <h1>Resume</h1>
+    <h1>Contact</h1>
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Lisa Walters</li>
@@ -21,7 +20,5 @@
         </ul>
     </div>
 
-
 </body>
-
 </html>
