--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
           <li class="name">Lisa Walters</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
@@ -25,8 +27,8 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m an aspiring web developer who is very excited to be learning all about the web, first through Team Treehouse's Front End Web Development Techdegree, and next through the Team Treehouse Full Stack JavaScript Techdegree.</p>
+        <p>I’ve been a professional pianist for twenty years, but am really looking forward to beginning a new career, and hopefully moving to the Maryland/Washington D.C. area! </p>
       </div> 
 
       <div class="card">
@@ -36,20 +38,21 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
+          <li>PHP</li>
+          <li>SQL</li>
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work for a web design or development firm helping clients create an impressive online presence. I love learning new things and am very excited to see where this journey will lead!</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.facebook.com/lisa.campi.walters"><img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_24x24.png"class="facebook"></a></li>
+        <li><a href="https://github.com/LisaPiano" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2020, Lisa Walters</p>
     </footer>
   </body>
   </html>
