Added Resume and Contact
Added resume and contact pages. I copied some of the HTML and CSS, but then made some adjustments

--- a/resume.html
+++ b/resume.html
@@ -8,20 +8,74 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
 
-<body>
+<body class="resume-body">
 
-    <h1>Resume</h1>
-    <div class="main-nav">
+    <h1 class="mainResume">Resume</h1>
+    <div class="resume-nav">
         <ul class="nav">
-          <li class="name">Lisa Walters</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="hobbies.html">Hobbies</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="name" id="changeName">Lisa Campi Walters</li>
+          <li><a href="index.html" id="resume-list">Home</a></li>
+          <li><a href="resume.html" id="resume-list">Resume</a></li>
+          <li><a href="hobbies.html" id="resume-list">Hobbies</a></li>
+          <li><a href="contact.html" id="resume-list">Contact</a></li>
         </ul>
     </div>
+    <section>
+        <h2 class="topicResume" id="nameResume">Lisa Campi Walters</h2>
+        <p>
+            <ul class="listResume">
+                <li>134 Big Bend Loop</li>
+                <li>Durango, Colorado 81301</li>
+                <li>970-946-9729</li>
+                <li>campi_l@fortlewis.edu</li>
+              </ul>
+              <hr>
+        </p>
+    </section>
 
+<section>
+    <h2 class="topicResume">Profile</h2>
+    <p class="listResume" id="profile-text">I am extremely passionate about technology and web development, and I am looking <br>for an entry level position as a Front-End or Full-Stack Web Developer.</p>
+</section>
 
+<section>
+    <h2 class="topicResume">Skills</h2>
+    <p>
+        <ul class="listResume">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Some Experience with Ruby</li>
+            <li>Problem solver and independent, self-motivated lifelong learner</li>
+            <li>Strong ability to work with people, good team-player</li>
+            <li>Excellent aural and written communication skills</li>
+        </ul>
+    </p>
+</section>
+
+<section>
+    <h2 class="topicResume">Education</h2>
+    <p>
+        <ul class="listResume">
+            <li>2020-2021 Front-End Web Development Techdegree, Team Treehouse</li>
+            <li>2020 Codecademy course and earned certificate in “Building Interactive JavaScript Websites”</li>
+            <li>2007 Doctorate of Musical Arts in Piano Performance, Eastman School of Music, Rochester, New York</li>
+            <li>1993 Master of Music in Piano Performance, University of Maryland, College Park, Maryland</li>
+            <li>1991 Bachelor of Music in Piano Performance, Indiana University, Bloomington, Indiana</li>
+        </ul>
+    </p>
+</section>
+
+<section>
+    <h2 class="topicResume">Employment</h2>
+    <p>
+        <ul class="listResume">
+            <li>2000- Professor of Piano at Fort Lewis College in Durango, Colorado. <br> Duties include teaching Applied Piano, Class Piano, Theory and Musicianship III and IV, <br> actively performing as soloist, with faculty trio and with the San Juan Symphony
+            </li><br>
+            <li>2015- Co-founder and director of the Piano Academy at Fort Lewis College. <br> and teach at a week-long camp for pre-college pianists</li>          
+        </ul>
+    </p>
+</section>
+<footer><a class="resumeFooter" href="file:///C:/Users/campi_l/Desktop/TTFEWD/myPersonalProfilePage/resume.html">Top</a></footer>
 </body>
-
 </html>
