--- a/contact.html
+++ b/contact.html
@@ -5,20 +5,31 @@
   <title>Lisa Walters' Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
   <body>
 
-    <h1>Contact</h1>
-    <div class="main-nav">
+    <h1>Contact Information</h1>
+    <div class="contact-nav">
         <ul class="nav">
-          <li class="name">Lisa Walters</li>
+          <li class="name">Lisa Campi Walters</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+    <div class="card">
+      <img src="https://www.fortlewis.edu/Portals/2/EasyDNNnews/126/Campi-piano2.jpg" alt="Lisa" style="width: 100%">
+      <h2>Lisa Campi Walters</h2>
+      <p class="title">Professor of Piano</p>
+      <p class="title">970-946-9729</p>
+      <p><a href="https://www.fortlewis.edu/academics/schools-departments/departments/music-department/about-our-faculty/campi-walters">Fort Lewis College</a></p>
+        <p><button> <a class="email" href="mailto:campi_l@fortlewis.edu?subject=Interest in your Website">Email me here</a></button></p>
+    </div>
+    
+    
 
 </body>
 </html>
