--- a/hobbies.html
+++ b/hobbies.html
@@ -12,7 +12,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Lisa Walters</li>
+          <li class="name">Lisa Campi Walters</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
