--- a/hobbies.html
+++ b/hobbies.html
@@ -20,18 +20,18 @@
         </ul>
     </div>
 
-    <section class="hobby-list">
+    <div class="hobby-list">
         <ul class="no-bullets">
-            <li>Playing with my Family<img class="pic"src="http://clipart-library.com/images/8iG6XaRgT.png"alt="picture of family"></img></li>
-            <li>Music<img class="pic"src="http://clipart-library.com/images/yTkreLgpc.jpg"alt="picture of musical notes "></img></li>
-            <li>Reading<img class="pic"src="http://clipart-library.com/data_images/55462.jpg"alt="picture of books"></img></li>
-            <li>Cooking<img class="pic"src="https://st.depositphotos.com/1593048/4187/v/600/depositphotos_41873085-stock-illustration-woman-in-kitchen-cook.jpg"alt="picture of cooking"></img></li>
-            <li>Hiking<img class="pic"src="https://static3.bigstockphoto.com/2/5/2/large2/252330595.jpg"alt="picture of hiking"></img></li>
+            <li class="play">Playing with my Family<img class="pic"src="http://clipart-library.com/images/8iG6XaRgT.png"alt="picture of family"></img></li>
+            <li class="music">Music<img class="pic"src="http://clipart-library.com/images/yTkreLgpc.jpg"alt="picture of musical notes "></img></li>
+            <li class="reading">Reading<img class="pic"src="http://clipart-library.com/data_images/55462.jpg"alt="picture of books"></img></li>
+            <li class="cooking">Cooking<img class="pic"src="https://st.depositphotos.com/1593048/4187/v/600/depositphotos_41873085-stock-illustration-woman-in-kitchen-cook.jpg"alt="picture of cooking"></img></li>
+            <li class="hiking">Hiking<img class="pic"src="https://static3.bigstockphoto.com/2/5/2/large2/252330595.jpg"alt="picture of hiking"></img></li>
         </ul>
 
 
 
-    </section>
+      </div>
 
 
 </body>
