--- a/resume.html
+++ b/resume.html
@@ -14,15 +14,14 @@
     <div class="resume-nav">
         <ul class="nav">
           <li class="name" id="changeName">Lisa Campi Walters</li>
-          <li><a href="index.html" id="resume-list">Home</a></li>
-          <li><a href="resume.html" id="resume-list">Resume</a></li>
-          <li><a href="hobbies.html" id="resume-list">Hobbies</a></li>
-          <li><a href="contact.html" id="resume-list">Contact</a></li>
+          <li><a href="index.html" class="resume-list">Home</a></li>
+          <li><a href="resume.html" class="resume-list">Resume</a></li>
+          <li><a href="hobbies.html" class="resume-list">Hobbies</a></li>
+          <li><a href="contact.html" class="resume-list">Contact</a></li>
         </ul>
     </div>
     <section>
         <h2 class="topicResume" id="nameResume">Lisa Campi Walters</h2>
-        <p>
             <ul class="listResume">
                 <li>134 Big Bend Loop</li>
                 <li>Durango, Colorado 81301</li>
@@ -30,7 +29,6 @@
                 <li>campi_l@fortlewis.edu</li>
               </ul>
               <hr>
-        </p>
     </section>
 
 <section>
@@ -40,7 +38,6 @@
 
 <section>
     <h2 class="topicResume">Skills</h2>
-    <p>
         <ul class="listResume">
             <li>HTML</li>
             <li>CSS</li>
@@ -50,12 +47,10 @@
             <li>Strong ability to work with people, good team-player</li>
             <li>Excellent aural and written communication skills</li>
         </ul>
-    </p>
 </section>
 
 <section>
     <h2 class="topicResume">Education</h2>
-    <p>
         <ul class="listResume">
             <li>2020-2021 Front-End Web Development Techdegree, Team Treehouse</li>
             <li>2020 Codecademy course and earned certificate in “Building Interactive JavaScript Websites”</li>
@@ -63,18 +58,16 @@
             <li>1993 Master of Music in Piano Performance, University of Maryland, College Park, Maryland</li>
             <li>1991 Bachelor of Music in Piano Performance, Indiana University, Bloomington, Indiana</li>
         </ul>
-    </p>
 </section>
 
 <section>
     <h2 class="topicResume">Employment</h2>
-    <p>
         <ul class="listResume">
             <li>2000- Professor of Piano at Fort Lewis College in Durango, Colorado. <br> Duties include teaching Applied Piano, Class Piano, Theory and Musicianship III and IV, <br> actively performing as soloist, with faculty trio and with the San Juan Symphony
-            </li><br>
+            </li>
+            <li class="break"></li>
             <li>2015- Co-founder and director of the Piano Academy at Fort Lewis College. <br> and teach at a week-long camp for pre-college pianists</li>          
         </ul>
-    </p>
 </section>
 <footer><a class="resumeFooter" href="file:///C:/Users/campi_l/Desktop/TTFEWD/myPersonalProfilePage/resume.html">Top</a></footer>
 </body>
