--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,10 @@
   <title>Lisa Walters' Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" >
 </head>
-  <body>
-
+  <body class="contact-body">
     <h1>Contact Information</h1>
     <div class="contact-nav">
         <ul class="nav">
@@ -20,16 +19,14 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+
     <div class="card">
       <img src="https://www.fortlewis.edu/Portals/2/EasyDNNnews/126/Campi-piano2.jpg" alt="Lisa" style="width: 100%">
       <h2>Lisa Campi Walters</h2>
       <p class="title">Professor of Piano</p>
       <p class="title">970-946-9729</p>
       <p><a href="https://www.fortlewis.edu/academics/schools-departments/departments/music-department/about-our-faculty/campi-walters">Fort Lewis College</a></p>
-        <p><button> <a class="email" href="mailto:campi_l@fortlewis.edu?subject=Interest in your Website">Email me here</a></button></p>
+        <p><a class="email" href="mailto:campi_l@fortlewis.edu">Email me here</a></p>
     </div>
-    
-    
-
-</body>
+  </body>
 </html>
