--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Lisa Campi Walters</li>
           <li><a href="index.html">Home</a></li>
@@ -16,7 +16,7 @@
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="lisaPicture.jpg" alt="Picture of Lisa Walters" class="profile-image">
@@ -25,13 +25,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <div class="article">
         <h2>Background</h2>
         <p>I’m an aspiring web developer who is very excited to be learning all about the web, first through Team Treehouse's Front End Web Development Techdegree, and next through the Team Treehouse Full Stack JavaScript Techdegree.</p>
         <p>I’ve been a professional pianist for twenty years, but am really looking forward to beginning a new career, and hopefully moving to the Maryland/Washington D.C. area! </p>
       </div> 
 
-      <div class="card">
+      <div class="article">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -43,13 +43,13 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design or development firm helping clients create an impressive online presence. I love learning new things and am very excited to see where this journey will lead!</p>
+        <p>I’m currently learning about coding and building beautiful websites. I love learning new things and am very excited to see where this journey will lead!</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="https://www.facebook.com/lisa.campi.walters"><img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_24x24.png"class="facebook"></a></li>
+        <li><a href="https://www.facebook.com/lisa.campi.walters"><img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_24x24.png" alt="facebook symbol" class="facebook"></a></li>
         <li><a href="https://github.com/LisaPiano" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Lisa Walters</p>
