Ready to submit
Just validated CSS, so it's ready to submit!

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="card">
-      <img src="https://www.fortlewis.edu/Portals/2/EasyDNNnews/126/Campi-piano2.jpg" alt="Lisa" style="width: 100%">
+      <img class="picture" src="https://www.fortlewis.edu/Portals/2/EasyDNNnews/126/Campi-piano2.jpg" alt="Lisa" style="width: 100%">
       <h2>Lisa Campi Walters</h2>
       <p class="title">Professor of Piano</p>
       <p class="title">970-946-9729</p>
