changed divs and downloaded pictures

--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" >
 </head>
-  <body class="contact-body">
+
+<body class="contact-body">
     <h1>Contact Information</h1>
-    <div class="contact-nav">
+    <nav class="contact-nav">
         <ul class="nav">
           <li class="name">Lisa Campi Walters</li>
           <li><a href="index.html">Home</a></li>
@@ -18,15 +19,15 @@
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
-    <div class="card">
+    <article class="card">
       <img class="picture" src="https://www.fortlewis.edu/Portals/2/EasyDNNnews/126/Campi-piano2.jpg" alt="Lisa" style="width: 100%">
       <h2>Lisa Campi Walters</h2>
       <p class="title">Professor of Piano</p>
       <p class="title">970-946-9729</p>
       <p><a href="https://www.fortlewis.edu/academics/schools-departments/departments/music-department/about-our-faculty/campi-walters">Fort Lewis College</a></p>
-        <p><a class="email" href="mailto:campi_l@fortlewis.edu">Email me here</a></p>
-    </div>
-  </body>
+      <p><a class="email" href="mailto:campi_l@fortlewis.edu">Email me here</a></p>
+    </article>
+</body>
 </html>
