--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>Lisa Campi Walters' Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+</head>
+
+<body>
 
     <nav class="main-nav">
         <ul class="nav">
@@ -16,7 +18,7 @@
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
+    </nav>
 
     <header>
       <img src="lisaPicture.jpg" alt="Picture of Lisa Walters" class="profile-image">
@@ -25,13 +27,13 @@
     </header>
 
     <main class="flex">
-      <div class="article">
+      <article class="article">
         <h2>Background</h2>
         <p>I’m an aspiring web developer who is very excited to be learning all about the web, first through Team Treehouse's Front End Web Development Techdegree, and next through the Team Treehouse Full Stack JavaScript Techdegree.</p>
         <p>I’ve been a professional pianist for twenty years, but am really looking forward to beginning a new career, and hopefully moving to the Maryland/Washington D.C. area! </p>
-      </div> 
+      </article> 
 
-      <div class="article">
+      <article class="article">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -44,9 +46,10 @@
           <li>Rails</li>
         </ul>
         <p>I’m currently learning about coding and building beautiful websites. I love learning new things and am very excited to see where this journey will lead!</p>
-      </div> 
+      </artile> 
 
     </main>
+    
     <footer>
       <ul>
         <li><a href="https://www.facebook.com/lisa.campi.walters"><img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_24x24.png" alt="facebook symbol" class="facebook"></a></li>
@@ -54,5 +57,5 @@
       </ul>
       <p class="copyright">Copyright 2020, Lisa Walters</p>
     </footer>
-  </body>
-  </html>
+</body>
+</html>
