--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 <body class="resume-body">
 
     <h1 class="mainResume">Resume</h1>
-    <div class="resume-nav">
+    <nav class="resume-nav">
         <ul class="nav">
           <li class="name" id="changeName">Lisa Campi Walters</li>
           <li><a href="index.html" class="resume-list">Home</a></li>
@@ -19,7 +19,7 @@
           <li><a href="hobbies.html" class="resume-list">Hobbies</a></li>
           <li><a href="contact.html" class="resume-list">Contact</a></li>
         </ul>
-    </div>
+    </nav>
     <section>
         <h2 class="topicResume" id="nameResume">Lisa Campi Walters</h2>
             <ul class="listResume">
@@ -69,6 +69,7 @@
             <li>2015- Co-founder and director of the Piano Academy at Fort Lewis College. <br> and teach at a week-long camp for pre-college pianists</li>          
         </ul>
 </section>
+
 <footer><a class="resumeFooter" href="file:///C:/Users/campi_l/Desktop/TTFEWD/myPersonalProfilePage/resume.html">Top</a></footer>
 </body>
 </html>
