--- a/hobbies.html
+++ b/hobbies.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
-  
-  <body class="hobby-body">
+ </head> 
+
+<body class="hobby-body">
       <h1>Hobbies</h1>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Lisa Campi Walters</li>
           <li><a href="index.html">Home</a></li>
@@ -18,16 +19,16 @@
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+      </nav>
 
-    <div class="hobby-list">
+    <section class="hobby-list">
         <ul class="no-bullets">
-            <li class="play">Playing with my Family<img class="pic" src="http://clipart-library.com/images/8iG6XaRgT.png" alt="picture of family"></li>
-            <li class="music">Music<img class="pic" src="http://clipart-library.com/images/yTkreLgpc.jpg" alt="picture of musical notes "></li>
-            <li class="reading">Reading<img class="pic" src="http://clipart-library.com/data_images/55462.jpg" alt="picture of books"></li>
-            <li class="cooking">Cooking<img class="pic" src="https://st.depositphotos.com/1593048/4187/v/600/depositphotos_41873085-stock-illustration-woman-in-kitchen-cook.jpg" alt="picture of cooking"></li>
-            <li class="hiking">Hiking<img class="pic" src="https://static3.bigstockphoto.com/2/5/2/large2/252330595.jpg" alt="picture of hiking"></li>
+            <li class="play">Playing with my Family<img class="pic" src="pictures/family.jpg" alt="picture of family"></li>
+            <li class="music">Music<img class="pic" src="pictures/musicalNotes.jpg" alt="picture of musical notes "></li>
+            <li class="reading">Reading<img class="pic" src="pictures/books.jpg" alt="picture of books"></li>
+            <li class="cooking">Cooking<img class="pic" src="pictures/cooking.jpg" alt="picture of cooking"></li>
+            <li class="hiking">Hiking<img class="pic" src="pictures/hiking.jpg" alt="picture of hiking"></li>
         </ul>
-      </div>
-  </body>
+      </section>
+</body>
 </html>
