--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li>Rails</li>
         </ul>
         <p>I’m currently learning about coding and building beautiful websites. I love learning new things and am very excited to see where this journey will lead!</p>
-      </artile> 
+      </article> 
 
     </main>
     
